--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <div class="hero">
             <div class="hero-content">
-                <h1>Welcome to Recipe Finder</h1>
+                <h1>Recipe Finder</h1>
                 <p>Your go-to place for amazing recipes.</p>
                 <input type="text" id="search-bar" placeholder="Search for recipes...">
         </div>
