--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <main>
         <section id="recipe-list">
-            <h2>Featured Recipes</h2>
+            <h2>Frequently searched Recipes</h2>
             <ul id="recipes">
                 <!-- Recipe items will be dynamically inserted here -->
             </ul>
