changed overall appearance

--- a/index.html
+++ b/index.html
@@ -27,7 +27,11 @@
         <section id="recipe-list">
             <h2>Frequently searched Recipes</h2>
             <ul id="recipes">
-                <!-- Recipe items will be dynamically inserted here -->
+                <li><a href="#">Spaghetti Carbonara</a></li>
+                <li><a href="#">Chicken Alfredo</a></li>
+                <li><a href="#">Beef Stroganoff</a></li>
+                <li><a href="#">Vegetable Stir Fry</a></li>
+                <li><a href="#">Chocolate Cake</a></li>
             </ul>
         </section>
     </main>
