--- a/index.html
+++ b/index.html
@@ -20,19 +20,15 @@
                 <h1>Recipe Finder</h1>
                 <p>Your go-to place for amazing recipes.</p>
                 <input type="text" id="search-bar" placeholder="Search for recipes...">
+            </div>
         </div>
-    
     </header>
 
     <main>
         <section id="recipe-list">
             <h2>Frequently searched Recipes</h2>
             <ul id="recipes">
-                <li><a href="#">Spaghetti Carbonara</a></li>
-                <li><a href="#">Chicken Alfredo</a></li>
-                <li><a href="#">Beef Stroganoff</a></li>
-                <li><a href="#">Vegetable Stir Fry</a></li>
-                <li><a href="#">Chocolate Cake</a></li>
+                <!-- Recipe items will be dynamically inserted here -->
             </ul>
         </section>
     </main>
