update on recipe

--- a/carbonara.html
+++ b/carbonara.html
@@ -17,34 +17,47 @@
     <header>
         <h1>Spaghetti Carbonara</h1>
     </header>
-
     <main>
-        <h2>Ingredients</h2>
-        <ul>
-            <li>200g spaghetti</li>
-            <li>100g pancetta</li>
-            <li>2 large eggs</li>
-            <li>50g pecorino cheese</li>
-            <li>50g parmesan</li>
-            <li>Freshly ground black pepper</li>
-            <li>Salt</li>
-        </ul>
-
-        <h2>Method</h2>
-        <ol>
-            <li>Put a large saucepan of water on to boil.</li>
-            <li>Finely chop the pancetta, having first removed any rind.</li>
-            <li>In a medium bowl, beat the eggs and mix in the grated cheeses.</li>
-            <li>Add salt to the boiling water, add the spaghetti and cook for 10 minutes.</li>
-            <li>Fry the pancetta until crispy, then add the garlic and cook for 1 minute.</li>
-            <li>Drain the spaghetti and mix with the pancetta, then remove from heat.</li>
-            <li>Quickly mix in the eggs and cheese, adding some cooking water if needed.</li>
-            <li>Serve with a good grinding of black pepper and extra cheese.</li>
-        </ol>
+        <section>
+            <h2>Ingredients</h2>
+            <ul>
+                <li>200g spaghetti</li>
+                <li>100g pancetta</li>
+                <li>2 large eggs</li>
+                <li>50g pecorino cheese</li>
+                <li>50g parmesan</li>
+                <li>Freshly ground black pepper</li>
+                <li>Salt</li>
+                <li>2 plump garlic cloves, peeled and left whole</li>
+                <li>50g unsalted butter</li>
+            </ul>
+        </section>
+        <section>
+            <h2>Method</h2>
+            <ol>
+                <li>Put a large saucepan of water on to boil.</li>
+                <li>Beat the eggs in a medium bowl, season with a little freshly grated black pepper and set aside.</li>
+                <li>Add the spaghetti to the boiling water and cook according to the packet instructions.</li>
+                <li>Fry the pancetta with the garlic until golden and crisp.</li>
+                <li>Remove the garlic from the pancetta and discard.</li>
+                <li>Keep the heat under the pancetta on low. When the pasta is ready, lift it from the water with a pasta fork or tongs and put it in the frying pan with the pancetta. Don't throw away the pasta water yet.</li>
+                <li>Mix most of the cheese in with the eggs, keeping a small handful back for sprinkling over later.</li>
+                <li>Take the pan of spaghetti and pancetta off the heat.</li>
+                <li>Quickly pour in the eggs and cheese. Using the tongs or a long fork, lift up the spaghetti so it mixes easily with the egg mixture, which thickens but doesn't scramble, and everything is coated.</li>
+                <li>Add extra pasta cooking water to keep it saucy.</li>
+                <li>Serve immediately with a sprinkling of the remaining cheese and a grating of black pepper.</li>
+            </ol>
+        </section>
+        <button onclick="goBack()">Back to Home</button>
     </main>
-
     <footer>
         <p>&copy; 2024 Recipe Finder</p>
     </footer>
+
+    <script>
+        function goBack() {
+            window.location.href = 'index.html';
+        }
+    </script>
 </body>
 </html>
