--- a/tikka-masala.html
+++ b/tikka-masala.html
@@ -17,49 +17,55 @@
     <header>
         <h1>Chicken Tikka Masala</h1>
     </header>
-
     <main>
-        <h2>Ingredients</h2>
-        <ul>
-            <li>4 boneless chicken breasts</li>
-            <li>1 cup yogurt</li>
-            <li>2 tbsp lemon juice</li>
-            <li>2 tsp ground cumin</li>
-            <li>2 tsp paprika</li>
-            <li>1 tsp ground turmeric</li>
-            <li>1 tsp ground coriander</li>
-            <li>1 tsp chili powder</li>
-            <li>1 tsp salt</li>
-            <li>1 tsp ground black pepper</li>
-            <li>2 tbsp vegetable oil</li>
-            <li>1 large onion, chopped</li>
-            <li>3 cloves garlic, minced</li>
-            <li>1 tbsp grated ginger</li>
-            <li>1 tsp garam masala</li>
-            <li>1 tsp ground cumin</li>
-            <li>1 tsp ground coriander</li>
-            <li>1 tsp paprika</li>
-            <li>1 tsp chili powder</li>
-            <li>1 tsp ground turmeric</li>
-            <li>1 tsp salt</li>
-            <li>1 can (400g) diced tomatoes</li>
-            <li>1 cup heavy cream</li>
-            <li>Fresh cilantro, for garnish</li>
-        </ul>
-
-        <h2>Method</h2>
-        <ol>
-            <li>Mix yogurt, lemon juice, and spices in a bowl. Add chicken and marinate for at least 1 hour.</li>
-            <li>Preheat the oven to 200°C. Bake the chicken for 20 minutes, or until cooked through.</li>
-            <li>Heat oil in a large skillet over medium heat. Add onions, garlic, and ginger, and cook until onions are soft.</li>
-            <li>Add spices and cook for another minute. Add tomatoes and simmer for 10 minutes.</li>
-            <li>Stir in the cream and add the cooked chicken. Simmer for another 10 minutes.</li>
-            <li>Garnish with fresh cilantro and serve with rice or naan.</li>
-        </ol>
+        <section>
+            <h2>Ingredients</h2>
+            <ul>
+                <li>4 boneless, skinless chicken breasts</li>
+                <li>1 cup plain yogurt</li>
+                <li>2 tbsp lemon juice</li>
+                <li>2 tsp ground cumin</li>
+                <li>2 tsp ground coriander</li>
+                <li>1 tsp ground turmeric</li>
+                <li>1 tsp ground cayenne pepper</li>
+                <li>1 tsp ground cinnamon</li>
+                <li>2 tsp salt</li>
+                <li>3 tbsp vegetable oil</li>
+                <li>1 large onion, finely chopped</li>
+                <li>4 cloves garlic, minced</li>
+                <li>1 tbsp grated fresh ginger</li>
+                <li>2 tsp paprika</li>
+                <li>1 tsp garam masala</li>
+                <li>1 (15-ounce) can tomato sauce</li>
+                <li>1 cup heavy cream</li>
+                <li>1/4 cup chopped fresh cilantro</li>
+                <li>Cooked basmati rice, for serving</li>
+            </ul>
+        </section>
+        <section>
+            <h2>Method</h2>
+            <ol>
+                <li>In a large bowl, combine yogurt, lemon juice, cumin, coriander, turmeric, cayenne, cinnamon, and salt.</li>
+                <li>Add chicken, and stir to coat. Cover and refrigerate for at least 1 hour.</li>
+                <li>Heat oil in a large pot over medium heat. Add onions and cook until softened and beginning to brown.</li>
+                <li>Stir in garlic and ginger, and cook until fragrant.</li>
+                <li>Add paprika and garam masala, and cook for 1 minute more.</li>
+                <li>Stir in tomato sauce and cream. Simmer for 10 minutes, until thickened.</li>
+                <li>Preheat grill to medium-high heat. Thread chicken onto skewers, and grill until juices run clear.</li>
+                <li>Remove chicken from skewers and add to sauce. Simmer for 5 minutes.</li>
+                <li>Garnish with fresh cilantro and serve with cooked basmati rice.</li>
+            </ol>
+        </section>
+        <button onclick="goBack()">Back to Home</button>
     </main>
-
     <footer>
         <p>&copy; 2024 Recipe Finder</p>
     </footer>
+
+    <script>
+        function goBack() {
+            window.location.href = 'index.html';
+        }
+    </script>
 </body>
 </html>
