--- a/vegetarian-pizza.html
+++ b/vegetarian-pizza.html
@@ -46,9 +46,16 @@
                 <li>Remove from oven and let cool slightly before slicing and serving.</li>
             </ol>
         </section>
+        <button onclick="goBack()">Back to Home</button>
     </main>
     <footer>
         <p>&copy; 2024 Recipe Finder</p>
     </footer>
+
+    <script>
+        function goBack() {
+            window.location.href = 'index.html';
+        }
+    </script>
 </body>
 </html>
