--- a/stroganoff.html
+++ b/stroganoff.html
@@ -48,9 +48,16 @@
                 <li>Serve over cooked egg noodles.</li>
             </ol>
         </section>
+        <button onclick="goBack()">Back to Home</button>
     </main>
     <footer>
         <p>&copy; 2024 Recipe Finder</p>
     </footer>
+
+    <script>
+        function goBack() {
+            window.location.href = 'index.html';
+        }
+    </script>
 </body>
 </html>
