--- a/index.html
+++ b/index.html
@@ -23,16 +23,12 @@
             </div>
         </div>
     </header>
-
     <main>
         <section id="recipe-list">
             <h2>Frequently searched Recipes</h2>
-            <ul id="recipes">
-                <!-- Recipe items will be dynamically inserted here -->
-            </ul>
+            <ul id="recipes"></ul>
         </section>
     </main>
-
     <section id="newsletter">
         <h2>Subscribe to Our Newsletter</h2>
         <form id="subscribe-form">
@@ -41,13 +37,9 @@
             <button type="submit">Subscribe</button>
         </form>
     </section>
-
-   
     <footer>
         <p>&copy; 2024 Recipe Finder</p>
-    </footer>   
-    
-
+    </footer>
     <script src="script.js"></script>
 </body>
 </html>
