--- a/index.html
+++ b/index.html
@@ -28,7 +28,10 @@
         <section id="recipe-list">
             <h2>Frequently searched Recipes</h2>
             <ul id="recipes">
-                <!-- Recipe items will be dynamically inserted here -->
+                <li><a href="carbonara.html">Spaghetti Carbonara</a></li>
+                <li><a href="tikka-masala.html">Chicken Tikka Masala</a></li>
+                <li><a href="stroganoff.html">Beef Stroganoff</a></li>
+                <li><a href="vegetarian-pizza.html">Vegetarian Pizza</a></li>
             </ul>
         </section>
     </main>
