--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
+            <li><a href="details.html">Details</a></li>
             <li><a href="recipe-form.html">Recipe Form</a></li>
         </ul>
     </nav>
@@ -25,14 +26,7 @@
     <main>
         <section id="recipe-list">
             <h2>Frequently searched Recipes</h2>
-
-            <ul id="recipes">
-                <li><a href="carbonara.html">Spaghetti Carbonara</a></li>
-                <li><a href="tikka-masala.html">Chicken Tikka Masala</a></li>
-                <li><a href="stroganoff.html">Beef Stroganoff</a></li>
-                <li><a href="vegetarian-pizza.html">Vegetarian Pizza</a></li>
-            </ul>
-
+            <ul id="recipes"></ul>
         </section>
     </main>
     <section id="newsletter">
