--- a/index.html
+++ b/index.html
@@ -20,15 +20,23 @@
                 <h1>Recipe Finder</h1>
                 <p>Your go-to place for amazing recipes.</p>
                 <input type="text" id="search-bar" placeholder="Search for recipes...">
-            </div>
         </div>
+    
     </header>
+
     <main>
         <section id="recipe-list">
             <h2>Frequently searched Recipes</h2>
-            <ul id="recipes"></ul>
+            <ul id="recipes">
+                <li><a href="#">Spaghetti Carbonara</a></li>
+                <li><a href="#">Chicken Alfredo</a></li>
+                <li><a href="#">Beef Stroganoff</a></li>
+                <li><a href="#">Vegetable Stir Fry</a></li>
+                <li><a href="#">Chocolate Cake</a></li>
+            </ul>
         </section>
     </main>
+
     <section id="newsletter">
         <h2>Subscribe to Our Newsletter</h2>
         <form id="subscribe-form">
@@ -37,9 +45,11 @@
             <button type="submit">Subscribe</button>
         </form>
     </section>
+
     <footer>
         <p>&copy; 2024 Recipe Finder</p>
     </footer>
+
     <script src="script.js"></script>
 </body>
 </html>
