--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </header>
     <main>
         <section id="recipe-list">
-            <h2>Frequently searched Recipes</h2>
+            <h2>Our Recipes</h2>
 
             <ul id="recipes">
                 <li><a href="carbonara.html">Spaghetti Carbonara</a></li>
