added drop down search

--- a/index.html
+++ b/index.html
@@ -18,20 +18,25 @@
             <div class="hero-content">
                 <h1>Recipe Finder</h1>
                 <p>Your go-to place for amazing recipes.</p>
-                <input type="text" id="search-bar" placeholder="Search for recipes...">
+                <div class="search-container">
+                    <input type="text" id="search-bar" placeholder="Search for recipes...">
+                    <button id="search-button">Search</button>
+                </div>
+                <div id="search-results"></div>
+            </div>
         </div>
-    
     </header>
 
     <main>
         <section id="recipe-list">
-            <h2>Our Recipes</h2>
+            <h2>Frequently Searched Recipes</h2>
 
             <ul id="recipes">
                 <li><a href="carbonara.html">Spaghetti Carbonara</a></li>
                 <li><a href="tikka-masala.html">Chicken Tikka Masala</a></li>
                 <li><a href="stroganoff.html">Beef Stroganoff</a></li>
                 <li><a href="vegetarian-pizza.html">Vegetarian Pizza</a></li>
+
             </ul>
         </section>
     </main>
